--- a/style.css
+++ b/style.css
@@ -1,50 +1,20 @@
-*{margin: 0px;padding: 0px; border:0px;}
+html, body, .container {height: 100%; }
+body {background: #666; font-size: 10px;}
 
-input:focus, textarea:focus {
-    outline: none;
-}
+.row { margin:0; }
+.col-xs-6, .col-xs-12 { margin:0; padding:0; }
 
-.button
-{
-    border: 0px; background: #777;
-font-size: 10px; color: #ddd;
-height: 17px; margin-bottom:2px;padding-left: 3px; padding-right: 3px;
-text-align: left;
-}
+.page.row {height: 40%; background: #ccc;}
+.menu.row {height: 60%; background: #333;}
 
-.button:active
-{
-    background: url(btpast.png);
-    color:#fff;
-    text-align: right;
-}
+#page {height: 100%; overflow: hidden;}
 
-.button:hover
-{
-    background: url(btselected.gif);
+.button {
+    margin:2px; border: 0px; padding: 2px;
+    background: #777; color: #ddd;
     text-align: left;
 }
+.button:active {background: url(btpast.png); color:#fff; text-align: right;}
+.button:hover {background: url(btselected.gif);}
 
-#page {
-    padding:4px;
-    margin-bottom:1px;margin-left:2px;background: #ccc;
-    overflow: hidden;
-}
-
-#main {
-    background: #666;
-}
-
-td{
-    vertical-align: top;
-}
-
-#menu{
-    width: 100%; display: "table"; margin-left:2px;background: #333; padding-left: 2px; padding-right: 0px; padding-top: 2px
-}
-#menuRow{
-    display: "table-row";
-}
-p {
-    padding: 0px;margin: 0px;
-}
+.noselect {-webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;}
