--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {background: #666; font-size: 10px;}
 .row { margin:0; }
 .col-xs-6, .col-xs-12 { margin:0; padding:0; }
 
-.page.row {height: 40%; background: #ccc;}
-.menu.row {height: 60%; background: #333;}
+.page.row {height: 68%; border:2px solid #333; background: #ccc;;padding-left: 8px}
+.menu.row {height: 32%; background: #000; overflow: hidden}
 
 #page {height: 100%; overflow: hidden;}
 
