--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ body {background: #666; font-size: 10px;}
 .row { margin:0; }
 .col-xs-6, .col-xs-12 { margin:0; padding:0; }
 
-.page.row {height: 68%; border:2px solid #333; background: #ccc;;padding-left: 8px}
+.page.row {height: 68%; border:2px solid #333; background: #ccc;}
 .menu.row {height: 32%; background: #000; overflow: hidden}
 
 #page {height: 100%; overflow: hidden;}
-
+div.mCSB_container{max-width: 400px;padding-left: 8px; padding-right:12px;margin-left: auto; margin-right: auto}
 .button {
     margin:2px; border: 0px; padding: 2px;
     background: #777; color: #ddd;
