--- a/style.css
+++ b/style.css
@@ -4,14 +4,13 @@ body {background: #666; font-size: 10px;}
 .row { margin:0; }
 .col-xs-6, .col-xs-12 { margin:0; padding:0; }
 
-.page.row {height: 68%; border:2px solid #333; background: #ccc;}
-.menu.row {height: 32%; background: #000; overflow: hidden}
+.page.row {height: 68%; border:2px solid #444; background: #ccc;}
+.menu.row {height: 32%; background: #000;}
 
-#page {height: 100%; overflow: hidden;}
-div.mCSB_container{max-width: 400px;padding-left: 8px; padding-right:12px;margin-left: auto; margin-right: auto}
+#page {height: 100%;overflow: auto; max-width: 400px;padding-left: 8px; padding-right:12px;margin-left: auto; margin-right: auto}
 .button {
     margin:2px; border: 0px; padding: 2px;
-    background: #666; color: #ddd;
+    background: #777; color: #ddd;
     text-align: left;
 }
 .button:active {background: url(btpast.png); color:#fff; text-align: right;}
