--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {background: #666; font-size: 10px;}
 .page.row {height: 68%; border:2px solid #444; background: #ccc;}
 .menu.row {height: 32%; background: #333;padding-right: 2px}
 
-#page {height: 100%; overflow: auto; max-width: 400px;padding-left: 8px; padding-right:12px;margin-left: auto; margin-right: auto; cursor:default
+#page {height: 100%; overflow: auto; max-width: 400px;padding-left: 8px; padding-right:12px;margin-left: auto; margin-right: auto; cursor:default; 
 }
 .button {
     margin-left:2px;margin-right: 0px; margin-bottom: 2px; margin-top: 2px; border: 0px; padding: 2px;
