--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@ body {background: #666; font-size: 10px;}
 .row { margin:0; }
 .col-xs-6, .col-xs-12 { margin:0; padding:0; position: relative;}
 
-.page.row {height: 68%; border:2px solid #444; background: #ccc;}
+.page.row {height: 68%; border:2px solid #444; background: #ccc; position:relative;}
 .menu.row {height: 32%; background: #333;padding-right: 2px}
 
-#page {height: 100%; overflow: auto; max-width: 400px;padding-left: 8px; padding-right:12px;margin-left: auto; margin-right: auto; cursor:default; 
+#page {max-height:100%; overflow: auto; max-width: 400px;padding-left: 8px; padding-right:8px;margin-left: auto; margin-right: auto; cursor:default; position:absolute;bottom:0;
 }
 .button {
     margin-left:2px;margin-right: 0px; margin-bottom: 2px; margin-top: 2px; border: 0px; padding: 2px;
