--- a/style.css
+++ b/style.css
@@ -1,21 +1,26 @@
 html, body, .container {height: 100%; }
-body {background: #666; font-size: 10px;}
+body {background: url(btselected.gif); font-size: 10px;}
 
 .row { margin:0; }
 .col-xs-6, .col-xs-12 { margin:0; padding:0; position: relative;}
 
-.page.row {height: 68%; border:2px solid #444; background: #ccc; position:relative;}
-.menu.row {height: 32%; background: #333;padding-right: 2px}
-
-#page {max-height:100%; overflow: auto; max-width: 400px;padding-left: 8px; padding-right:8px;margin-left: auto; margin-right: auto; cursor:default; position:absolute;bottom:0;
+.page.row {height: 68%;  max-width: 600px; border:2px solid #444; background: #ccc; position:relative;}
+.menu.row {height: 32%; max-width: 600px; background: #333;padding-right: 2px; padding-top: 8px}
+#main {padding-right: 4px; padding-left: 4px}
+#page {max-height:90%; overflow: auto; max-width: 400px;padding-left: 8px; padding-right:8px;margin-left: auto; margin-right: auto; cursor:default; position:absolute;bottom:0;margin-bottom: 10px
 }
 .button {
-    margin-left:2px;margin-right: 0px; margin-bottom: 2px; margin-top: 2px; border: 0px; padding: 2px;
-    background: #777; color: #ddd; cursor:default;
+    margin-left:2px;margin-right: 0px; margin-bottom: 2px; margin-top: 2px; border: 0px; padding: 2px; padding-left: 8px;
+    background: #555; color: #eee; cursor:default;
     text-align: left;
 }
-.button.selected {background: url(btpast.png); color:#fff; text-align: right;position:relative;}
+.button.selected {background-color:#333 ; text-align: right;position:relative;}
 
-.button:hover {background: url(btselected.gif);}
+.button:hover {background-color: #777;}
+
+pre {
+ font-size: 8px; font-family:'Arial'; margin: 0; padding: 0; background-color: #ccc;
+border: 0; border-radius: 0px; word-break: normal;
+}
 
 .noselect {-webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;}
