--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@ body {background: #000; font-size: 10px;}
  border-left:4px solid #444; border-right:4px solid #444;
  background: #ccc; position:relative;}
 .menu.row {height: 32%; max-width: 500px; background: #222;
- border:4px solid #444; border-top: 2px solid #444; border-bottom-color:#000;padding-right: 0px; padding-top: 0px}
+ border:4px solid #444; border-top: 2px solid #444; border-bottom-color:#111;padding-right: 0px; padding-top: 0px}
 #main {padding-right: 4px; padding-left: 4px}
-#page {max-height:90%; overflow: auto; max-width: 400px;padding-left: 8px; padding-right:8px;margin-left: auto; margin-right: auto; cursor:default; position:absolute;bottom:0;margin-bottom: 10px
+#page { max-height:90%; overflow: auto; max-width: 400px;padding-left: 8px; padding-right:8px;margin-left: auto; margin-right: auto; cursor:default; position:absolute;bottom:0;margin-bottom: 10px
 }
 .button:last-child {border-bottom: 1px solid #444}
 .button {
@@ -23,11 +23,12 @@ body {background: #000; font-size: 10px;}
  border-bottom: 0px solid#eee;}
 .button.left:hover {border-left: 4px solid#444}
 .button.right:hover {border-right: 4px solid#444}
-.button.right{margin-right:20%;text-align: left; border-right: 4px solid #444}
-.button.left {margin-left:20%;text-align: right; border-left: 4px solid #444}
+.button.right{margin-right:20%;text-align: left; border-right: 3px solid #444}
+.button.left {margin-left:20%;text-align: right; border-left: 3px solid #444}
 
+pre:last-child { color:#000;}
 pre {
- font-size: 8px; font-family:'Arial'; margin: 0; padding: 0; background-color: #ccc;
+ font-size: 10px; color: #444;font-family:'Arial'; margin: 0; padding: 0; background-color: #ccc;
 border: 0; border-radius: 0px; word-break: normal;
 }
 
