--- a/style.css
+++ b/style.css
@@ -1,35 +1,69 @@
 html, body, .container {height: 100%; }
 body {background: #000; font-size: 10px;}
 
-.row { margin:0; }
-.col-xs-6, .col-xs-12 { margin:0; padding:0; position: relative;}
+#main {padding-right: 2%; padding-left: 2%}
 
-.page.row {height: 68%;  max-width: 500px; 
+.row {margin:0; max-width: 600px;}
+
+.col-xs-6, .col-xs-12 {margin:0; padding:0; position: relative;}
+
+#page {max-height:90%; overflow: auto; 
+ padding-left: 10%; padding-right:10%;
+ cursor:default; position:absolute;
+ bottom:0; margin-bottom: 10px}
+
+.page.row {
+ height: 80%; position:relative;
  border-left:4px solid #444; border-right:4px solid #444;
- background: #ccc; position:relative;}
-.menu.row {height: 32%; max-width: 500px; background: #222;
- border:4px solid #444; border-top: 2px solid #444; border-bottom-color:#111;padding-right: 0px; padding-top: 0px}
-#main {padding-right: 4px; padding-left: 4px}
-#page { max-height:90%; overflow: auto; max-width: 400px;padding-left: 8px; padding-right:8px;margin-left: auto; margin-right: auto; cursor:default; position:absolute;bottom:0;margin-bottom: 10px
+ background: #ccc;}
+
+img{
+ width:100%;
+ padding-left: 30%;
+ opacity:0.4;
 }
-.button:last-child {border-bottom: 1px solid #444}
+img:last-child{
+ opacity: 1;
+}
+
+pre {font-family:'Arial'; font-size: 10px;
+margin: 0; padding: 0; border: 0;
+padding-bottom: 6px; 
+background-color: #ccc;
+word-break: normal;
+color:#444;
+}
+pre:last-child {color:#000;}
+pre.inter {color:#000;text-align: center;
+ font-size: 16px;
+ margin: 20px;}
+ 
+.menu.row {
+ height: 20%;
+ border:4px solid #444; border-top: 2px solid #444; 
+ border-bottom-color:#111;
+ overflow:auto;
+ background-color: #222}
+
 .button {
-    margin-left:0px;margin-right: 0px; margin-bottom: 1px; margin-top: 1px; border: 0px; padding: 2px;
-    background: #333; color: #ccc; cursor:default;border-bottom: 0px solid#333
-}
-.button.selected {background-color:#666;color:#eee; ;position:relative; border-bottom: 0px solid#000;border-left: 0px solid#000}
+ margin-bottom: 1px; margin-top: 1px; 
+ margin-left:0px;margin-right: 0px; 
+ border: 0px; padding: 2px;
+ background: #333; color: #ccc; 
+ cursor:default;}
 
-.button:hover {background-color: #666;color:#eee;
- border-bottom: 0px solid#eee;}
+.button.selected {
+ background-color:#666;color:#eee; 
+ position:relative;}
+.button:hover {background-color: #666; color:#eee;}
+.button:last-child {border-bottom: 1px solid #444} 
+
+.button.left {text-align: right; 
+ margin-left:20%; border-left: 3px solid #444}
 .button.left:hover {border-left: 4px solid#444}
-.button.right:hover {border-right: 4px solid#444}
-.button.right{margin-right:20%;text-align: left; border-right: 3px solid #444}
-.button.left {margin-left:20%;text-align: right; border-left: 3px solid #444}
 
-pre:last-child { color:#000;}
-pre {
- font-size: 10px; color: #444;font-family:'Arial'; margin: 0; padding: 0; background-color: #ccc;
-border: 0; border-radius: 0px; word-break: normal;
-}
+.button.right{text-align: left;
+ margin-right:20%; border-right: 3px solid #444}
+.button.right:hover {border-right: 4px solid#444}
 
 .noselect {-webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;}
