--- a/style.css
+++ b/style.css
@@ -32,12 +32,16 @@ padding-bottom: 6px;
 background-color: #ccc;
 word-break: normal;
 color:#444;
+opacity: 0.7;
 }
-pre:last-child {color:#000;}
+pre:last-child {color:#000; opacity: 1;}
 pre.inter {color:#000;text-align: center;
  font-size: 16px;
  margin: 20px;}
- 
+ pre.inter.title{
+  font-size: 14px;
+  font-variant:small-caps; 
+ }
 .menu.row {
  height: 20%;
  border:4px solid #444; border-top: 2px solid #444; 
@@ -55,7 +59,9 @@ pre.inter {color:#000;text-align: center;
 .button.selected {
  background-color:#666;color:#eee; 
  position:relative;}
+
 .button:hover {background-color: #666; color:#eee;}
+
 .button:last-child {border-bottom: 1px solid #444} 
 
 .button.left {text-align: right; 
