--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@ body {background: #000; font-size: 11px;}
 
 .col-xs-6, .col-xs-12 {margin:0; padding:0; position: relative;}
 
-#page {max-height:90%; overflow: auto; 
+#page {max-height: 98%; overflow: auto; 
  padding-left: 10%; padding-right:10%;
  cursor:default; position:absolute;
- bottom:0; margin-bottom: 10px}
+ bottom:0; margin-bottom: 10px; margin-top: 10px}
 
 .page.row {
  height: 80%; position:relative;
