--- a/style.css
+++ b/style.css
@@ -4,23 +4,22 @@ body {background: #000; font-family:'Prociono'; font-size: 16px;}
 @font-face
 {
 font-family: Prociono;
-src: url(font/Fanwood.otf);
+src: url(font/Prociono.ttf);
 }
 
-#main {padding-right: 2%; padding-left: 2%}
+#main {padding:0; border-left:3px solid #444; border-right:3px solid #444;}
 
 .row {margin:0; max-width: 600px;}
 
 .col-xs-6, .col-xs-12 {margin:0; padding:0; position: relative;}
 
 #page {max-height: 98%; overflow: auto; 
- padding-left: 10%; padding-right:10%;
+ padding-left: 6%; padding-right:6%;
  cursor:default; position:absolute;
  bottom:0; margin-bottom: 10px; margin-top: 10px}
 
 .page.row {
  height: 80%; position:relative;
- border-left:4px solid #444; border-right:4px solid #444;
  background: #ccc;}
 
 img{
@@ -47,17 +46,18 @@ pre.inter {color:#000;text-align: center;
  pre.inter.title{
   font-size: 18px; 
  }
+
 .menu.row {
  height: 20%;
- border:4px solid #444; border-top: 2px solid #444; 
  border-bottom-color:#111;
  overflow:auto;
  background-color: #222}
 
 .button {
- margin-bottom: 1px; margin-top: 1px; 
+ margin-bottom: 0px; margin-top: 0px; 
  margin-left:0px;margin-right: 0px; 
  border: 0px; padding: 2px;
+ border-top: 1px solid#222;
  background: #333; color: #ccc; 
  cursor:default;}
 
@@ -67,14 +67,14 @@ pre.inter {color:#000;text-align: center;
 
 .button:hover {background-color: #666; color:#eee;}
 
-.button:last-child {border-bottom: 1px solid #444} 
+.button:last-child {border-bottom: 0px solid #444} 
 
 .button.left {text-align: right; 
- margin-left:20%; border-left: 3px solid #444}
+ margin-left:1px; border-left: 3px solid #444}
 .button.left:hover {border-left: 4px solid#444}
 
 .button.right{text-align: left;
- margin-right:20%; border-right: 3px solid #444}
-.button.right:hover {border-right: 4px solid#444}
+ margin-right:1px; border-right: 3px solid #444}
+.button.right:hover {border-right: 4px solid#444;}
 
 .noselect {-webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;}
