--- a/style.css
+++ b/style.css
@@ -78,3 +78,5 @@ pre.inter {color:#000;text-align: center;
 .button.right:hover {border-right: 4px solid#444;}
 
 .noselect {-webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;}
+
+#fsb{background: #fff; color:#000;}
