--- a/style.css
+++ b/style.css
@@ -7,24 +7,26 @@ font-family: Prociono;
 src: url(font/Prociono.ttf);
 }
 
-#main {padding:0; border-left:3px solid #444; border-right:3px solid #444;}
+#main {padding:0;max-width: 600px;}
 
-.row {margin:0; max-width: 600px;}
+.row {margin:0;}
 
 .col-xs-6, .col-xs-12 {margin:0; padding:0; position: relative;}
 
 #page {max-height: 98%; overflow: auto; 
  padding-left: 6%; padding-right:6%;
  cursor:default; position:absolute;
- bottom:0; margin-bottom: 10px; margin-top: 10px}
+ bottom:0; margin-bottom: 10px; margin-top: 10px;
+ }
 
 .page.row {
- height: 80%; position:relative;
- background: #ccc;}
+ height:79%;position:relative;
+ background: #ccc;
+border-bottom:1px solid #222;}
 
 img{
  width:100%;
- padding-left: 30%;
+ padding-left: 3`0%;
  opacity:0.4;
 }
 img:last-child{
@@ -36,11 +38,11 @@ margin: 0; padding: 0; border: 0;
 padding-bottom: 6px; 
 background-color: #ccc;
 word-break: normal;
-color:#444;
-opacity: 0.7;
+color:#000;
+opacity: 0.67;
 }
 pre:last-child {color:#000; opacity: 1;}
-pre.inter {color:#000;text-align: center;
+pre.inter {text-align: center;
  font-size: 16px;
  margin: 20px;}
  pre.inter.title{
@@ -48,35 +50,32 @@ pre.inter {color:#000;text-align: center;
  }
 
 .menu.row {
- height: 20%;
+ height: 21%;
  border-bottom-color:#111;
  overflow:auto;
- background-color: #222}
+ background-color: #222;
+ border-left:5px solid #000;
+ border-right:5px solid #000;}
 
 .button {
- margin-bottom: 0px; margin-top: 0px; 
+ margin-bottom: 1px; margin-top: 0px; 
  margin-left:0px;margin-right: 0px; 
  border: 0px; padding: 2px;
- border-top: 1px solid#222;
  background: #333; color: #ccc; 
  cursor:default;}
 
 .button.selected {
- background-color:#666;color:#eee; 
+ background-color:#666; 
  position:relative;}
 
-.button:hover {background-color: #666; color:#eee;}
+.button:hover {background-color: #666;}
 
 .button:last-child {border-bottom: 0px solid #444} 
 
-.button.left {text-align: right; 
- margin-left:1px; border-left: 3px solid #444}
-.button.left:hover {border-left: 4px solid#444}
+.button.left {text-align: right; border-left:2px solid #444;}
+.button.left:hover {border-left-color:#555 }
 
-.button.right{text-align: left;
- margin-right:1px; border-right: 3px solid #444}
-.button.right:hover {border-right: 4px solid#444;}
+.button.right{text-align: left; border-right: 2px solid #444}
+.button.right:hover {border-right-color:#555}
 
 .noselect {-webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;}
-
-#fsb{background: #fff; color:#000;}
